--- a/public/style.css
+++ b/public/style.css
@@ -13,11 +13,11 @@ body,
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; 
 }
 
 nav {
-  background-color: #5793fd;
+  background-color: #e03997;
   color: #ffffff;
   height: 80px;
   padding: 10px;
@@ -46,6 +46,7 @@ header {
 
 header h1 {
   transform: skewX(-2deg);
+  color: #e03997;
 }
 
 select {
@@ -75,7 +76,7 @@ select:hover {
 
 select:focus {
   border-color: #aaa;
-  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  box-shadow: 0 0 1px 3px #e03997;
   box-shadow: 0 0 0 3px -moz-mac-focusring;
   color: #222;
   outline: none;
@@ -100,8 +101,10 @@ input {
 }
 
 .wrapper {
-  background-color: #f2f8ff;
+  /* background-color: #f2f8ff; */
   padding-bottom: 100px;
+  /* background-color: rgb(242, 212, 217); */
+  background-color: rgb(245, 233, 235);
 }
 
 .card.m-auto,
@@ -182,8 +185,8 @@ button {
 #toast.success {
   opacity: 1;
   right: 10px;
-  background-color: hsl(94, 40%, 86%);
-  color: hsl(94, 90%, 16%);
+  background-color: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 100%);
   transition: all 1.2s;
 }
 
@@ -244,8 +247,8 @@ button {
 
 #toast.success {
   right: 10px;
-  background-color: hsl(94, 40%, 86%);
-  color: hsl(94, 90%, 16%);
+  background-color: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 100%);
   transition: all 0.5s;
 }
 .workout-type,
@@ -302,8 +305,8 @@ button {
 }
 
 #toast.success {
-  background-color: hsl(94, 40%, 86%);
-  color: hsl(94, 90%, 16%);
+  background-color: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 100%);
   animation-name: toast;
   animation-duration: 2s;
   animation-fill-mode: forwards;
@@ -358,8 +361,8 @@ form > button {
 }
 
 #toast.success {
-  background-color: hsl(94, 40%, 86%);
-  color: hsl(94, 90%, 16%);
+  background-color: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 100%);
 }
 
 .prev-workout h3 {
@@ -371,10 +374,6 @@ form > button {
   margin-top: 5px;
   margin-bottom: 5px;
 }
-
-/* .workout .card {
-  width: 350px;
-} */
 
 .prev-workout button {
   margin: 10px;
